--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "composer-boilerplate",
+    "name": "jhenning/composer-boilerplate",
     "description": "A boilerplate package for composer packages",
     "license": "MIT",
     "authors": [
@@ -15,6 +15,6 @@
         }
     },
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.1"
     }
 }
